--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -13,7 +13,7 @@ main p{
     text-align: left;
     font-size: bold;
     font-size: 1.3em;
-    padding: 20px;
+    padding-left: 20px;
     line-height: 2.3em;
 
 }
@@ -36,36 +36,32 @@ header a:hover{
 header p{
     color: rgba(255, 255, 255, 0.587);
 }
-.flor{
-    color: white;
-    background-image: url("imagens/background001.jpg");
-    width: auto;
-    height: 600px;
-    background-size: cover;
-    background-attachment: scroll;
-    background-position: center right;
+section {
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  padding-left: 30px;
+
 }
-.flor >p{ 
-background-color: black;
- 
+section.flor{
+   background-image: url("../d012/imagens/background001.jpg");
+   background-position: right center;
+   background-size: cover;
 }
-.papel{
-    color: white;
-    background-image: url("imagens/background002.jpg");
-    width: auto;
-    height: 500px;
-    background-size: cover;
-    background-position: center right;
+   
+section.flor >p{
+background-color: rgba(0, 0, 0, 0.6);
+color: white;
+display: inline-block;
+padding: 5px;
+text-shadow: 1px 1px 2px black;
+
+ }
+
+section.papel {
+
+
 }
-.papel{
-    color: white;
-    background-image: url("imagens/background002.jpg");
-    width: auto;
-    height: 600px;
-    background-size: cover;
-    background-attachment: scroll;
-    background-position: center right;
-}
+
 footer{
     color: white;
     height: 30px;
