--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,29 +1,42 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Passion+One:wght@400;700;900&display=swap');
 
-body{
-    margin: 0px ;
-    padding:0px ;
-
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion one';
+    --fonte3: 'Kalam';
 }
-main{
- font-family: cursive, sans-serif;
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body{
+ font-family: var(--fonte3)
 }
 
 main p{
     text-align: left;
     font-size: bold;
-    font-size: 1.3em;
+    font-size: 2em;
     padding-left: 20px;
-    line-height: 2.3em;
+    line-height: 1.8em;
 
 }
 header{
-    height: 100px;
-    width: auto;
-    background-color: black;
-    color: white;
-    padding: 20px;
+     background-color: black;
+     color: white;
+     text-align: center;
+    
+}
+header h1{
+    padding: 50px;
     text-align: center;
+    font-family: var(--fonte2);
+    font-size: 10vw;
+
 }
 header a{
     text-decoration: none;
@@ -37,18 +50,26 @@ header p{
     color: rgba(255, 255, 255, 0.587);
 }
 section {
-  padding-top: 10vh;
-  padding-bottom: 10vh;
+  padding-top: 11vh;
+  padding-bottom: 11vh;
   padding-left: 30px;
+  font-family: var(--fonte3);
 
 }
-section.flor{
+
+section.imagem{
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.457);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section.imagem#flor{
    background-image: url("../d012/imagens/background001.jpg");
-   background-position: right center;
-   background-size: cover;
+   background-position: center right;
+  
 }
    
-section.flor >p{
+section.imagem#flor >p{
 background-color: rgba(0, 0, 0, 0.6);
 color: white;
 display: inline-block;
@@ -57,11 +78,16 @@ text-shadow: 1px 1px 2px black;
 
  }
 
-section.papel {
-
-
+section.imagem#papel {
+        background-image: url("../d012/imagens/background002.jpg");
 }
-
+section.imagem#papel >p{
+    background-color: rgba(0, 0, 0, 0.6);
+color: white;
+display:inline-block;
+padding: 5px;
+text-shadow: 1px 1px 2px black;
+}
 footer{
     color: white;
     height: 30px;
